Initial commit for landing page.

--- a/index.html
+++ b/index.html
@@ -21,21 +21,51 @@
 <body>
     <header>
         <nav>
-            <div class="nav-main">
-                <li>
-                    John Doe
-                </li>
+            <div class="spacing">    
+                <div class="nav-main">
+                    <li>
+                        <a href="/">
+                            John Doe
+                        </a>
+                    </li>
+                </div>
+                <ul class="nav-links">
+                    <li>
+                        <a href="/">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/work/">
+                            Work
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/about/">
+                            About
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/contact/">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav-links">
-                <li>Home</li>
-                <li>Work</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
         </nav>
     </header>
-
-    <main>
+    <main> 
+        <div class="landing">
+            <div class="hero">
+                <img src="images/Avatar placeholder.jpg" alt="A picture of me">
+                <h1 class="into">    
+                    Hi, my name is John Doe
+                </h1>
+                <h1 class="about">
+                    I am an ethusiastic Social Media Manager
+                </h1>
+            </div>
+        </div>
 
     </main>
 
