Add skeletal framework, styling needs to be done.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="js/main.js" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <nav>
             <div class="spacing">    
@@ -54,8 +55,9 @@
             </div>
         </nav>
     </header>
+
     <main> 
-        <div class="landing">
+        <div class="section landing">
             <div class="hero">
                 <img src="images/Avatar placeholder.jpg" alt="A picture of me">
                 <h1 class="into">    
@@ -64,13 +66,85 @@
                 <h1 class="about">
                     I am an ethusiastic Social Media Manager
                 </h1>
+
+                <div class="call-to-action">
+                    <a href="">Latest Work <span>&#8595;</span></a>
+                </div>
             </div>
         </div>
 
+        <div class="section featured">
+            <div class="title">
+                <h1>Featured Projects</h1>
+            </div>
+
+            <div class="carousel">
+                <div class="project">
+
+                </div>
+            </div>
+
+            <a class="general_link" href="">All Projects</a>
+        </div>
+
+        <div class="section contact-page">
+            <div class="title">
+                <h1>Interested in my work? Contact me below, its free...</h1>
+            </div>
+
+            <form action="" class="contact-form">
+                <div class="contact-detail">
+                    <label for="name">
+                        Name
+                    </label>
+                    <input name="name" type="text">
+                </div>
+                <div class="contact-detail">
+                    <label for="email">
+                        Email
+                    </label>
+                    <input name="email" type="email">
+                </div>
+                <div class="contact-detail">
+                    <label for="message">
+                        Message
+                    </label>
+                    <input name="message" type="text" row>
+                </div>
+            </form>
+        </div>
     </main>
 
     <footer>
-
+        <div class="copy-right">
+            <p>Copyright @2021 John Doe</p>
+        </div>
+        <div class="footer-links">
+            <div class="social-media">
+                <div class="link-title">
+                    <h4>Follow Me</h4>
+                    <div class="footer-link">
+                        <img src="#" alt="LinkedIn">
+                        <a href="#">LinkedIn</a>
+                    </div>
+                    <div class="footer-link">
+                        <img src="#" alt="Behance">
+                        <a href="#">Behance</a>
+                    </div>
+                    <div class="footer-link">
+                        <img src="#" alt="Instagram">
+                        <a href="#">Instagram</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sitemap">
+                <a href="#">Home</a>
+                <a href="#">Projects</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
     </footer>
+
 </body>
 </html>
