Started work on footer, still busy with it

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 </div>
             </div>
             <div class="sitemap">
+                <h4>Sitemap</h4>
                 <a href="#">Home</a>
                 <a href="#">Projects</a>
                 <a href="#">About</a>
