--- a/index.html
+++ b/index.html
@@ -121,24 +121,26 @@
         </div>
         <div class="footer-links">
             <div class="social-media">
-                <div class="link-title">
-                    <h4>Follow Me</h4>
-                    <div class="footer-link">
-                        <img src="#" alt="LinkedIn">
-                        <a href="#">LinkedIn</a>
-                    </div>
-                    <div class="footer-link">
-                        <img src="#" alt="Behance">
-                        <a href="#">Behance</a>
-                    </div>
-                    <div class="footer-link">
-                        <img src="#" alt="Instagram">
-                        <a href="#">Instagram</a>
-                    </div>
+                <div class="footer-category-title">
+                    <p>Follow Me</p>
+                </div>
+                <div class="footer-link">
+                    <img src="#" alt="LinkedIn">
+                    <a href="#">LinkedIn</a>
+                </div>
+                <div class="footer-link">
+                    <img src="#" alt="Behance">
+                    <a href="#">Behance</a>
+                </div>
+                <div class="footer-link">
+                    <img src="#" alt="Instagram">
+                    <a href="#">Instagram</a>
                 </div>
             </div>
             <div class="sitemap">
-                <h4>Sitemap</h4>
+                <div class="footer-category-title">
+                    <p>Sitemap</p>
+                </div>
                 <a href="#">Home</a>
                 <a href="#">Projects</a>
                 <a href="#">About</a>
