Contact section complete

--- a/index.html
+++ b/index.html
@@ -97,20 +97,21 @@
                     <label for="name">
                         Name
                     </label>
-                    <input name="name" type="text">
+                    <input name="name" type="text" placeholder="John Doe">
                 </div>
                 <div class="contact-detail">
                     <label for="email">
                         Email
                     </label>
-                    <input name="email" type="email">
+                    <input name="email" type="email" placeholder="example@domain.com">
                 </div>
                 <div class="contact-detail">
                     <label for="message">
                         Message
                     </label>
-                    <input name="message" type="text" row>
+                    <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
                 </div>
+                <input type="submit" value="Get in Touch">
             </form>
         </div>
     </main>
