Finished Featured, fixed images, spacing included

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     <main> 
         <div class="section landing">
             <div class="hero">
-                <img src="images/Avatar placeholder.jpg" alt="A picture of me">
+                <div class="avatar">
+                    <img src="https://via.placeholder.com/600" alt="A picture of me">
+                </div>
                 <h1 class="into">    
                     Hi, my name is John Doe
                 </h1>
@@ -68,26 +70,50 @@
                 </h1>
 
                 <div class="call-to-action">
-                    <a href="">Latest Work <span>&#8595;</span></a>
+                    <a href="" class="btn-primary">Latest Work <span>&#8595;</span></a>
                 </div>
             </div>
         </div>
 
-        <div class="section featured">
+        <div class="section featured spacing">
             <div class="title">
                 <h1>Featured Projects</h1>
             </div>
 
-            <div class="carousel">
-                <div class="project">
-
+            <div class="projects">
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
                 </div>
             </div>
 
-            <a class="general_link" href="">All Projects</a>
+            <a class="page-link" href="">All Projects <span>&#8594;</span></a>
         </div>
 
-        <div class="section contact-page">
+        <div class="section contact-page spacing">
             <div class="title">
                 <h1>Interested in my work? Contact me below, its free...</h1>
             </div>
@@ -111,7 +137,7 @@
                     </label>
                     <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
                 </div>
-                <input type="submit" value="Get in Touch">
+                <input type="submit" value="Get in Touch" class="btn-primary">
             </form>
         </div>
     </main>
