Fix footer images and links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link href="js/main.js" rel="stylesheet">
 </head>
 <body>
-
     <header>
         <nav>
             <div class="spacing">    
@@ -152,15 +151,15 @@
                     <p>Follow Me</p>
                 </div>
                 <div class="footer-link">
-                    <img src="#" alt="LinkedIn">
+                    <img src="https://via.placeholder.com/50" alt="LinkedIn">
                     <a href="#">LinkedIn</a>
                 </div>
                 <div class="footer-link">
-                    <img src="#" alt="Behance">
+                    <img src="https://via.placeholder.com/50" alt="Behance">
                     <a href="#">Behance</a>
                 </div>
                 <div class="footer-link">
-                    <img src="#" alt="Instagram">
+                    <img src="https://via.placeholder.com/50" alt="Instagram">
                     <a href="#">Instagram</a>
                 </div>
             </div>
@@ -175,6 +174,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
