--- a/index.html
+++ b/index.html
@@ -15,44 +15,12 @@
         }
     </script> -->
 
-    <link href="css/main.css" rel="stylesheet">
-    <link href="js/main.js" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
+    <link href="../js/main.js" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="spacing">    
-                <div class="nav-main">
-                    <li>
-                        <a href="/">
-                            John Doe
-                        </a>
-                    </li>
-                </div>
-                <ul class="nav-links">
-                    <li>
-                        <a href="/">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/work/">
-                            Work
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/about/">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/contact/">
-                            Contact
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
     </header>
 
     <main> 
@@ -142,37 +110,16 @@
     </main>
 
     <footer>
-        <div class="copy-right">
-            <p>Copyright @2021 John Doe</p>
-        </div>
-        <div class="footer-links">
-            <div class="social-media">
-                <div class="footer-category-title">
-                    <p>Follow Me</p>
-                </div>
-                <div class="footer-link">
-                    <img src="https://via.placeholder.com/50" alt="LinkedIn">
-                    <a href="#">LinkedIn</a>
-                </div>
-                <div class="footer-link">
-                    <img src="https://via.placeholder.com/50" alt="Behance">
-                    <a href="#">Behance</a>
-                </div>
-                <div class="footer-link">
-                    <img src="https://via.placeholder.com/50" alt="Instagram">
-                    <a href="#">Instagram</a>
-                </div>
-            </div>
-            <div class="sitemap">
-                <div class="footer-category-title">
-                    <p>Sitemap</p>
-                </div>
-                <a href="#">Home</a>
-                <a href="#">Projects</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </div>
-        </div>
     </footer>
 </body>
 </html>
+
+<script>
+    $.get("../components/nav.html", function(data){
+        $("header").replaceWith(data);
+    });
+    
+    $.get("../components/footer.html", function(data){
+        $("footer").replaceWith(data);
+    });
+</script>
