Files now share component inject in main.js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </script> -->
 
     <link href="../css/main.css" rel="stylesheet">
-    <link href="../js/main.js" rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
     <header>
@@ -115,11 +116,10 @@
 </html>
 
 <script>
-    $.get("../components/nav.html", function(data){
-        $("header").replaceWith(data);
-    });
-    
-    $.get("../components/footer.html", function(data){
-        $("footer").replaceWith(data);
-    });
+    var amountOfCards = $('.projects').children().length;
+    if(amountOfCards > 0){
+        if(amountOfCards % 2 !== 0){
+            $('.projects').children().last().addClass("last-card");
+        }
+    }
 </script>
