--- a/work/index.html
+++ b/work/index.html
@@ -16,9 +16,9 @@
 
 
     <link href="../css/main.css" rel="stylesheet">
-    <link href="../js/main.js" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,68 @@
     </header>
 
     <main>
-        <div class="section">
+        <div class="section spacing">
+            <div class="title">
+                <h1>All Projects</h1>
+            </div>
+
+            <div class="projects">
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://via.placeholder.com/600" alt="Card_photo">
+                    <div class="content">
+                        <div class="card-title"><h4>Social Media Integration</h4></div>
+                        <div class="card-date">July 2021</div>
+                        <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
+                        <a href="#" class="card-cta btn-primary">Learn More</a>
+                    </div>
+                </div>
+                
+            </div>
 
         </div>
     </main>
@@ -34,15 +95,15 @@
     <footer>
         <!-- Footer injected by script -->
     </footer>
+
 </body>
 </html>
 
 <script>
-    $.get("../components/nav.html", function(data){
-        $("header").replaceWith(data);
-    });
-
-    $.get("../components/footer.html", function(data){
-        $("footer").replaceWith(data);
-    });
+    var amountOfCards = $('.projects').children().length;
+    if(amountOfCards > 0){
+        if(amountOfCards % 2 !== 0){
+            $('.projects').children().last().addClass("last-card");
+        }
+    }
 </script>
