--- a/Contact/index.html
+++ b/Contact/index.html
@@ -16,9 +16,9 @@
 
 
     <link href="../css/main.css" rel="stylesheet">
-    <link href="../js/main.js" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
     <header>
@@ -26,8 +26,32 @@
     </header>
 
     <main>
-        <div class="section">
+        <div class="section contact-page spacing">
+            <div class="title">
+                <h1>Interested in my work? Contact me below, its free...</h1>
+            </div>
 
+            <form action="" class="contact-form">
+                <div class="contact-detail">
+                    <label for="name">
+                        Name
+                    </label>
+                    <input name="name" type="text" placeholder="John Doe">
+                </div>
+                <div class="contact-detail">
+                    <label for="email">
+                        Email
+                    </label>
+                    <input name="email" type="email" placeholder="example@domain.com">
+                </div>
+                <div class="contact-detail">
+                    <label for="message">
+                        Message
+                    </label>
+                    <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
+                </div>
+                <input type="submit" value="Get in Touch" class="btn-primary">
+            </form>
         </div>
     </main>
 
@@ -36,13 +60,3 @@
     </footer>
 </body>
 </html>
-
-<script>
-    $.get("../components/nav.html", function(data){
-        $("header").replaceWith(data);
-    });
-
-    $.get("../components/footer.html", function(data){
-        $("footer").replaceWith(data);
-    });
-</script>
