--- a/work/index.html
+++ b/work/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <div class="section spacing bottom-margin-l">
+        <div class="section spacing bottom-m-l top-m-s">
             <div class="title">
                 <h1>All Projects</h1>
             </div>
