Fix padding below nav bar

--- a/work/index.html
+++ b/work/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <div class="section spacing bottom-m-l top-m-s">
+        <div class="section spacing bottom-m-l top-m-m">
             <div class="title">
                 <h1>All Projects</h1>
             </div>
@@ -86,7 +86,6 @@
                         <a href="#" class="card-cta btn-primary">Learn More</a>
                     </div>
                 </div>
-                
             </div>
 
         </div>
