About page started

--- a/About/index.html
+++ b/About/index.html
@@ -26,7 +26,63 @@
     </header>
 
     <main>
-        <div class="section">
+        <!-- <div class="section pg-fixed-bg bg-colour-main"></div> -->
+        <div class="section spacing top-m-s">
+            <!-- A MD FILE WILL BE USED -->
+            <!-- Make sure to style:  -->
+            <div class="title">
+                <h1>Get to Know Me</h1>
+            </div>
+
+            <div class="about-grid">
+                <img src="https://via.placeholder.com/800x600" alt="Placeholder">
+                <div class="about-intro">
+                    <p class="intro-meta">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud
+                    </p>
+                    <div class="about-links">
+                        <a href="#" class="btn-primary bg-white font-italics">LinkedIn <span>&#8594;</span></a>
+                        <a href="#" class="btn-primary bg-white font-italics">Resume<span>&#8594;</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section spacing">
+            <div class="title">
+                <h1>Skills</h1>
+            </div>
+
+            <div class="skills">
+                <div class="skills-container">
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                    <div class="skill-card">
+                        <p>Marketing</p>
+                        <img src="https://via.placeholder.com/400" alt="placeholder">
+                    </div>
+                </div>
+            </div>
 
         </div>
     </main>
