--- a/About/index.html
+++ b/About/index.html
@@ -28,8 +28,6 @@
     <main>
         <!-- <div class="section pg-fixed-bg bg-colour-main"></div> -->
         <div class="section spacing top-m-s">
-            <!-- A MD FILE WILL BE USED -->
-            <!-- Make sure to style:  -->
             <div class="title">
                 <h1>Get to Know Me</h1>
             </div>
@@ -83,8 +81,43 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <div class="section spacing">
+            <div class="title">
+                <h1>Interests</h1>
+            </div>
+
+            <div class="interests-list">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                </ul>
+                <img src="https://via.placeholder.com/600" alt="placeholderImage">
+            </div>
+            <div class="spacing rich-text">
+                <!-- Need to test this with the admin rich text -->
+                <!-- <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus in hac habitasse platea dictumst. Platea dictumst vestibulum rhoncus est. Sit amet justo donec enim diam vulputate. Urna nec tincidunt praesent semper feugiat nibh.
+                </p>
+
+                <p>
+                    Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Porta non pulvinar neque laoreet suspendisse interdum consectetur. Donec ultrices tincidunt arcu non sodales. Parturient montes nascetur ridiculus mus mauris vitae ultricies leo. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Arcu dui vivamus arcu felis bibendum ut. Euismod nisi porta lorem mollis aliquam. Nulla pellentesque dignissim enim sit amet venenatis urna cursus eget. Suspendisse potenti nullam ac tortor vitae purus faucibus. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas. Id donec ultrices tincidunt arcu non sodales neque sodales ut. Massa enim nec dui nunc mattis enim ut tellus. Eu consequat ac felis donec et. Ut tortor pretium viverra suspendisse potenti. Nulla aliquet enim tortor at auctor urna nunc id. Est velit egestas dui id ornare arcu odio. Varius sit amet mattis vulputate enim nulla aliquet.
+                </p>
+
+                <ul>
+                    <li>tempor incididunt ut labore et dolore magna aliqua. Tellus in hac habitasse</li>
+                    <li>latea dictumst vestibulum rhoncus est. Sit amet justo donec enim diam vulputate. Urna nec tincidunt praesent semper feugiat nibh.</li>
+                    <li>t ut labore et dolore magna aliqua</li>
+                    <li>in hac habitass</li>
+                </ul>
+
+                <img src="https://via.placeholder.com/1200x1200" alt="Placeholder_img"> -->
+            </div>
+        </div>
+        
     </main>
 
     <footer>
