finished media queries for tablet

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <div class="section contact-page spacing top-m-s">
+        <div class="section contact-page spacing top-m-s full-page">
             <div class="title">
                 <h1>Interested in my work? Contact me below, its free...</h1>
             </div>
