--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a class="page-link" href="">All Projects <span>&#8594;</span></a>
         </div>
 
-        <div class="section contact-page spacing">
+        <div class="section contact-page spacing last-section">
             <div class="title">
                 <h1>Interested in my work? Contact me below, its free...</h1>
             </div>
