media queries for Individual-work page

--- a/work/individual-project.html
+++ b/work/individual-project.html
@@ -27,7 +27,7 @@
 
     <main>
         <img class="work-bg-img" src="https://via.placeholder.com/800x900" alt="Placeholder_img">
-        <div class="section spacing top-p-m">
+        <div class="section spacing full-page top-p-m">
             <div class="title">
                 <h1>Content Creation for Steel Company</h1>
             </div>
