Finishing off touches before bakend

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
                 </h1>
 
                 <div class="call-to-action">
-                    <a href="" class="btn-primary">Latest Work <span>&#8595;</span></a>
+                    <a href="#latest_work" class="btn-primary">Latest Work <span>&#8595;</span></a>
                 </div>
             </div>
         </div>
 
         <div class="section featured spacing">
+            <span class="anchor-link" id="latest_work"></span>
             <div class="title">
                 <h1>Featured Projects</h1>
             </div>
@@ -78,7 +79,7 @@
                 </div>
             </div>
 
-            <a class="page-link" href="">All Projects <span>&#8594;</span></a>
+            <a class="page-link" href="/work/">All Projects <span>&#8594;</span></a>
         </div>
 
         <div class="section contact-page spacing last-section">
