Restructure folder, pass through added for css. js

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
         }
     </script> -->
 
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <header>
