individual projects load with dynamic hyperlink, just need to customize content for project

--- a/public/work/index.html
+++ b/public/work/index.html
@@ -106,7 +106,7 @@
                 <div class="card-title"><h4>Social Media Creation 1</h4></div>
                 <div class="card-date">01 May 2021</div>
                 <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
-                <a href="#" class="card-cta btn-primary">Learn More</a>
+                <a href="/projects/2021-04-brand-creation-for-brand1/" class="card-cta btn-primary">Learn More</a>
             </div>
         </div>
 
@@ -118,7 +118,7 @@
                 <div class="card-title"><h4>Social Media Creation 2</h4></div>
                 <div class="card-date">01 May 2021</div>
                 <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
-                <a href="#" class="card-cta btn-primary">Learn More</a>
+                <a href="/projects/2021-05-01-social-media-marketing-for-brandx/" class="card-cta btn-primary">Learn More</a>
             </div>
         </div>
 
@@ -130,7 +130,7 @@
                 <div class="card-title"><h4>Social Media Creation 3</h4></div>
                 <div class="card-date">01 May 2021</div>
                 <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
-                <a href="#" class="card-cta btn-primary">Learn More</a>
+                <a href="/projects/2021-05-social-media-marketing-for-brandy/" class="card-cta btn-primary">Learn More</a>
             </div>
         </div>
 
@@ -142,7 +142,7 @@
                 <div class="card-title"><h4>Social Media Creation 4</h4></div>
                 <div class="card-date">01 May 2021</div>
                 <div class="card-breadcrumbs"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p></div>
-                <a href="#" class="card-cta btn-primary">Learn More</a>
+                <a href="/projects/2021-07-social-media-marketing-for-brandz/" class="card-cta btn-primary">Learn More</a>
             </div>
         </div>
 
