--- a/public/about/info/index.html
+++ b/public/about/info/index.html
@@ -165,7 +165,7 @@
         </ul>
         <img src="https://via.placeholder.com/600" alt="placeholderImage">
     </div>
-    <div class="spacing markdown bottom-m-l top-m-s">
+    <div class="spacing rich-text">
 
         <h1>Heading 1</h1>
 <h2>Heading 2</h2>
