--- a/public/projects/2021-07-social-media-marketing-for-brandz/index.html
+++ b/public/projects/2021-07-social-media-marketing-for-brandz/index.html
@@ -123,7 +123,7 @@
     </div>
 </div>
 
-<div class="section work-content spacing bottom-m-l top-m-s">
+<div class="section work-content markdown spacing bottom-m-l top-m-s">
     
         <h1>Heading 1</h1>
 <h2>Heading 2</h2>
