--- a/public/projects/2021-07-social-media-marketing-for-brandz/index.html
+++ b/public/projects/2021-07-social-media-marketing-for-brandz/index.html
@@ -118,12 +118,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p>
 
         <div class="cta centre-parent">
-            <a href="#" class="btn-primary">Tell me more!<span>&#8595;</span></a>
+            <a href="#target-content" class="btn-primary">Tell me more!<span>&#8595;</span></a>
         </div>
     </div>
 </div>
 
 <div class="section work-content markdown spacing bottom-m-l top-m-s">
+    <span class="anchor-link" id="target-content"></span>
     
         <h1>Heading 1</h1>
 <h2>Heading 2</h2>
