meta descripion and titles updated foreach page, this is build on SEO optimization

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -15,13 +15,13 @@
     </script> -->
 
     <!-- Meta Info --> 
-    <title>John Doe - Contact Me</title>
-    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+    <title>John Doe - John Doe - Contact Me</title>
+    <meta name="Description" CONTENT="Lets meet for a virtual coffee, I would love to develop your idea into an action.">
 
     <!-- Preload -->
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
