--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,13 +15,13 @@
     </script> -->
 
     <!-- Meta Info --> 
-    <title>John Doe - Get to know me</title>
-    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+    <title>John Doe - John Doe - Get to know me</title>
+    <meta name="Description" CONTENT="I create experiences, get to know me better and what motivates me.">
 
     <!-- Preload -->
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
