--- a/public/work/index.html
+++ b/public/work/index.html
@@ -16,12 +16,12 @@
 
     <!-- Meta Info --> 
     <title>John Doe - Latest Projects</title>
-    <meta name="Description" CONTENT="I am a passionate Social Media Marketer with an unmatched work ethic. Vist my site to find out more...">
+    <meta name="Description" CONTENT="View my latest projects which includes a variety of clients.">
 
     <!-- Preload -->
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
-    <link rel="preload" as="font" crossorigin type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Medium.ttf">
+    <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Regular.ttf">
 
     <!-- CSS -->
     <link href="/style.css" rel="stylesheet">
