fix some meta titles

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,7 +15,7 @@
     </script> -->
 
     <!-- Meta Info --> 
-    <title>John Doe - John Doe - Get to know me</title>
+    <title>John Doe - Get to know me</title>
     <meta name="Description" CONTENT="I create experiences, get to know me better and what motivates me.">
 
     <!-- Preload -->
