--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -15,7 +15,7 @@
     </script> -->
 
     <!-- Meta Info --> 
-    <title>John Doe - John Doe - Contact Me</title>
+    <title>John Doe - Contact Me</title>
     <meta name="Description" CONTENT="Lets meet for a virtual coffee, I would love to develop your idea into an action.">
 
     <!-- Preload -->
