updated about interests and landing image

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -110,7 +110,7 @@
     <h1>Interested in my work? Contact me below, its free...</h1>
 </div>
 
-<form action="" class="contact-form">
+<form name="contact" method="POST" data-netlify="true" class="contact-form">
     <div class="contact-detail">
         <label for="name">
             Name
