Partial include added for contact form

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -16,7 +16,7 @@
 
     <!-- Meta Info --> 
     <title>John Doe - Contact Me</title>
-    <meta name="Description" CONTENT="Lets meet for a virtual coffee, I would love to develop your idea into an action.">
+    <meta name="Description" CONTENT="Lets get your idea into action by having a virtual coffee.">
 
     <!-- Preload -->
     <link rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="/assets/fonts/Poppins-Light.ttf">
@@ -105,11 +105,12 @@
     
     <main>
       <div class="section contact-page spacing top-m-s full-page">
-<div class="title">
-    <h1>Interested in my work? Contact me below, its free...</h1>
-</div>
 
-<form name="contact" method="POST" data-netlify="true" class="contact-form">
+    <div class="title">
+        <h1>Interested in my work? Contact me below, its free...</h1>
+    </div>
+
+    <form name="contact-form" method="POST" data-netlify="true" class="contact-form">
     <div class="contact-detail">
         <label for="name">
             Name
@@ -130,6 +131,7 @@
     </div>
     <input type="submit" value="Get in Touch" class="btn-primary">
 </form>
+
 </div>
     </main>
     
