--- a/public/index.html
+++ b/public/index.html
@@ -188,32 +188,33 @@
     <a class="page-link" href="/work/">All Projects <span>&#8594;</span></a>
 </div>
 
-<div class="section contact-page spacing last-section">
+<div class="section contact-page spacing last-section top-m-l">
     <div class="title">
         <h1>Interested in my work? Contact me below, its free...</h1>
     </div>
 
-    <form action="" class="contact-form">
-        <div class="contact-detail">
-            <label for="name">
-                Name
-            </label>
-            <input name="name" type="text" placeholder="John Doe">
-        </div>
-        <div class="contact-detail">
-            <label for="email">
-                Email
-            </label>
-            <input name="email" type="email" placeholder="example@domain.com">
-        </div>
-        <div class="contact-detail">
-            <label for="message">
-                Message
-            </label>
-            <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
-        </div>
-        <input type="submit" value="Get in Touch" class="btn-primary">
-    </form>
+     <form name="contact-form" method="POST" data-netlify="true" class="contact-form">
+    <div class="contact-detail">
+        <label for="name">
+            Name
+        </label>
+        <input name="name" type="text" placeholder="John Doe">
+    </div>
+    <div class="contact-detail">
+        <label for="email">
+            Email
+        </label>
+        <input name="email" type="email" placeholder="example@domain.com">
+    </div>
+    <div class="contact-detail">
+        <label for="message">
+            Message
+        </label>
+        <textarea name="message" rows="4" placeholder="Enter message here..."></textarea>
+    </div>
+    <input type="submit" value="Get in Touch" class="btn-primary">
+</form>
+     
 </div>
 
 <script>
